# haskell-jq-exercise

./: .gitignore  flake.nix  fourmolu.yaml  jq-exercises.cabal  package.yaml  stan.toml
src/: Jq.hs  ReferenceJq.hs
