cabal-version:   3.0
name:            jq-exercises
version:         0.1.0.0
license:         NONE
author:          Tikhon Jelvis <tikhon@jelv.is>
maintainer:      Tikhon Jelvis <tikhon@jelv.is>
build-type:      Simple

common baseline
    ghc-options: -Wall
    build-depends: base, aeson

executable example
    import:           baseline
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
