cabal-version: 3.0
name:          jq-exercises
version:       0.1.0.0
license:
author:        Tikhon Jelvis <tikhon@jelv.is>
maintainer:    Tikhon Jelvis <tikhon@jelv.is>
build-type:    Simple

common baseline
  ghc-options:        -Wall -fno-show-error-context
  default-language:   GHC2021
  default-extensions: DerivingStrategies
  build-depends:
    , aeson
    , base
    , containers
    , text
    , vector

library
  import:          baseline
  hs-source-dirs:  src
  exposed-modules:
    Jq
    ReferenceJq
